v 1.1
+ Сhanged CallCode() to CallCodes() for multicodes support
+ Add MOK three-letter abbreviation country codes
+ Add FIFA three-letter country codes
+ Add "Ascension and Tristan da Cunha"
+ Add multi callcodes (Dominicana, Jamaica, Puerto Rico and others)
+ Add detection of deleted ISO 3166 codes 
+ Add indeterminate reservations ISO 3166 codes 
+ Add transitional reservations ISO 3166 codes 
+ Add non-countries call codes (Inmarsat, International Freephone and others)