@@ -151,6 +151,7 @@ const (
 	CallCode380     CallCode = 380
 	CallCode381     CallCode = 381
 	CallCode382     CallCode = 382
+	CallCode383     CallCode = 383
 	CallCode385     CallCode = 385
 	CallCode386     CallCode = 386
 	CallCode387     CallCode = 387
@@ -440,6 +441,7 @@ func AllCallCodes() []CallCode {
 		CallCode380,
 		CallCode381,
 		CallCode382,
+		CallCode383,
 		CallCode385,
 		CallCode386,
 		CallCode387,
@@ -815,6 +817,8 @@ func (c CallCode) Countries() []CountryCode {
 		return []CountryCode{SRB}
 	case CallCode382:
 		return []CountryCode{MNE}
+	case CallCode383:
+		return []CountryCode{XKX}
 	case CallCode385:
 		return []CountryCode{HRV}
 	case CallCode386:
