@@ -1,3 +1,5 @@
 module github.com/biter777/countries
 
 go 1.13
+
+require github.com/jinzhu/gorm v1.9.11
